@@ -11,22 +11,22 @@ MD5 33cdd958f1be433095a69bff6be18148 files/emacs-cvs-freebsd-sparc.patch 475
 RMD160 a8e6e3f2bc014979fd269a027835a65520c12417 files/emacs-cvs-freebsd-sparc.patch 475
 SHA256 43584ea923e6c7221e69d1d6a14d55d386565c5decd067a62acc58af522c803b files/emacs-cvs-freebsd-sparc.patch 475
 DIST emacs-22.0.96.tar.gz 37846686 RMD160 d980f7f8ec6c646a9b741718284b081987f9d73c SHA1 e2942bdbf693a0814fcc3b34d5ae55765d5d4ad8 SHA256 a9fa904e00e09d8b68e701edda208bd274053d26d0b50d97d6c977084e5c307d
-EBUILD emacs-cvs-22.0.96.ebuild 7335 RMD160 dbeca5dcdec72434e0ba3c11c978b9655868e51d SHA1 3e1a2dd65adebc4e7cd58d2e3dc12db663784092 SHA256 9f576a1d3934ee6b7ae5fe33f7b3b722a69238e9a9bd9e5b6ff590ba3e61e6f6
-MD5 779bb433c30a122f9326c7f0ac1889c9 emacs-cvs-22.0.96.ebuild 7335
-RMD160 dbeca5dcdec72434e0ba3c11c978b9655868e51d emacs-cvs-22.0.96.ebuild 7335
-SHA256 9f576a1d3934ee6b7ae5fe33f7b3b722a69238e9a9bd9e5b6ff590ba3e61e6f6 emacs-cvs-22.0.96.ebuild 7335
-EBUILD emacs-cvs-22.0.9999-r8.ebuild 7611 RMD160 fe4a99d95012d64b98181362600a3de4c5ac93a6 SHA1 93497cb9701ce920d2acc5f89e138dd212cb3826 SHA256 d140d361a5ecaaf7aa25c17ab8655cc37fcc9355544b37858c23dc6c5354a5a0
-MD5 a37010ef24248d8fa249562956fd8ee9 emacs-cvs-22.0.9999-r8.ebuild 7611
-RMD160 fe4a99d95012d64b98181362600a3de4c5ac93a6 emacs-cvs-22.0.9999-r8.ebuild 7611
-SHA256 d140d361a5ecaaf7aa25c17ab8655cc37fcc9355544b37858c23dc6c5354a5a0 emacs-cvs-22.0.9999-r8.ebuild 7611
-EBUILD emacs-cvs-23.0.0-r4.ebuild 7869 RMD160 5ba2cb63b52555ad83a60ddbf78d460286a1b6f6 SHA1 8ecc0114f079fd65aec2acb08b15078f776f940c SHA256 841011674e45496f320cec16967f84c69fe419456b224097863dc4dbdfb315c2
-MD5 d8c82b7c389514835d283b0957bce2d4 emacs-cvs-23.0.0-r4.ebuild 7869
-RMD160 5ba2cb63b52555ad83a60ddbf78d460286a1b6f6 emacs-cvs-23.0.0-r4.ebuild 7869
-SHA256 841011674e45496f320cec16967f84c69fe419456b224097863dc4dbdfb315c2 emacs-cvs-23.0.0-r4.ebuild 7869
-MISC ChangeLog 7317 RMD160 9224228f61865bdee3e89ffed3fefa03477847b7 SHA1 a8db5074fefd5ce58f1dcf451ffe7e0f5cfe50c6 SHA256 a337cd9078504c88a6a8d597ff381c769a825f395abff50b4df6be53edb9a19c
-MD5 26d6aae8fb484c5bffec46696ec1d492 ChangeLog 7317
-RMD160 9224228f61865bdee3e89ffed3fefa03477847b7 ChangeLog 7317
-SHA256 a337cd9078504c88a6a8d597ff381c769a825f395abff50b4df6be53edb9a19c ChangeLog 7317
+EBUILD emacs-cvs-22.0.96.ebuild 7349 RMD160 98b4df42a842e26cff0b0ead5b287f6574d6a4b2 SHA1 8e3641a4c65ab57f1014ba9db871f96548b9faee SHA256 7b3cfccacdc3080c75253a665bb19e121af7ef7eb2eaa1e16972fd402148a1f4
+MD5 14cde4a3b1c65d035d9ec0e17b6436a9 emacs-cvs-22.0.96.ebuild 7349
+RMD160 98b4df42a842e26cff0b0ead5b287f6574d6a4b2 emacs-cvs-22.0.96.ebuild 7349
+SHA256 7b3cfccacdc3080c75253a665bb19e121af7ef7eb2eaa1e16972fd402148a1f4 emacs-cvs-22.0.96.ebuild 7349
+EBUILD emacs-cvs-22.0.9999-r8.ebuild 7637 RMD160 9b0abb0088183112f87b9e55d7426eb3e21cbb38 SHA1 37e4b7bbe3ffb3c83897417e2eeeb4694a8cc617 SHA256 efaa4b862748bdc74c8e3d55604113108d787c566ab03ec35f495eab2f7500b7
+MD5 8b38de8cb9e69ead6fa4af60ac0be3d6 emacs-cvs-22.0.9999-r8.ebuild 7637
+RMD160 9b0abb0088183112f87b9e55d7426eb3e21cbb38 emacs-cvs-22.0.9999-r8.ebuild 7637
+SHA256 efaa4b862748bdc74c8e3d55604113108d787c566ab03ec35f495eab2f7500b7 emacs-cvs-22.0.9999-r8.ebuild 7637
+EBUILD emacs-cvs-23.0.0-r4.ebuild 7895 RMD160 67b30237b7cb56bdee11d3fb889fd975139cf1c1 SHA1 d3f857e4e009a14b1c4ba334382e26dbbeac1ba9 SHA256 ac8648e52ffe716dde80a34a59c98edd179d22627dd78ebf28e585a08647061b
+MD5 7fe865901e0c16f86a46e73b369f8fa5 emacs-cvs-23.0.0-r4.ebuild 7895
+RMD160 67b30237b7cb56bdee11d3fb889fd975139cf1c1 emacs-cvs-23.0.0-r4.ebuild 7895
+SHA256 ac8648e52ffe716dde80a34a59c98edd179d22627dd78ebf28e585a08647061b emacs-cvs-23.0.0-r4.ebuild 7895
+MISC ChangeLog 7516 RMD160 a3796e9207352dfe29ccc7658759df8600bfc1a5 SHA1 870a778c0cbb23a27e149d7aeaa6280015cd862c SHA256 28648a5e0908501059f8cfec10713779c61f72a2f3ebc4a0e35594f835ddf912
+MD5 125a3177b5d5e221f2d7d4c3d081832c ChangeLog 7516
+RMD160 a3796e9207352dfe29ccc7658759df8600bfc1a5 ChangeLog 7516
+SHA256 28648a5e0908501059f8cfec10713779c61f72a2f3ebc4a0e35594f835ddf912 ChangeLog 7516
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
